# N2Train

./: Makefile  README.md  n2_kanji.csv  pyproject.toml
src/: database.py  main.py
