[project]
name = "n2train-kanji"
version = "0.1.0"
description = "SRS Kanji trainer for JLPT N2"
authors = [
    {name = "mchauvin"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=15.0.0,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
